<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_plan_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/plan_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_text" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_plan_text"
        >

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password" />

    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        />

    <Button
        android:id="@+id/button_decrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decrypt"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/button_encrypt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/encrypt"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/input_layout_password"
        android:layout_above="@id/button_encrypt"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/encrypted_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/encrypted_string"
                />

            <TextView
                android:id="@+id/encrypted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/decrypted_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/decrypted_string"
                android:layout_marginTop="5dp"
                />

            <TextView
                android:id="@+id/decrypted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearance"
                android:textColor="@android:color/black"
                />

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
